--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartCold_QRReader">
-        <activity android:name=".menu_principal">
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".menu_principal"></activity>
+
+        <activity android:name=".activitylogin">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,7 +24,6 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
